2005-11-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* AUTHORS: Added myself.

2005-11-02  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_INIT): Set version to 0.19-generics.
	* lib/Makefile.am: Add typeHiding, unchecked, unused and varargsCast
	to ECJ compile warning rule.

2005-11-02  Tom Tromey  <tromey@redhat.com>

	* javax/sound/midi/Instrument.java (Instrument): Genericized argument
	type.
	* javax/sound/midi/SoundbankResource.java (SoundbankResource):
	Genericized argument type.
	(getDataClass): Genericized return type.
	* javax/sound/midi/Sequence.java (tracks): Changed type.
	(init): Updated.
	(getTracks): Updated.
	(getTickLength): Updated.

2005-11-02  Andreas Tobler  <a.tobler@schweiz.ch>

	* NEWS: Mention Qt4 configury for OS-X.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* NEWS: Added some news items regarding my Swing work.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(findOverlapFreeParent): Don't search beyond the components
	containing window (important when in a Dialog).

2005-11-02  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* AUTHORS: Added myself to the cool gang.

2005-11-02  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/WrappedPlainView.java:
	(calculateBreakPosition): If the component is not valid use it's 
	preferredSize instead of getBounds().

2005-11-02  Lillian Angel  <langel@redhat.com>

	* java/awt/Dialog.java
	(show): pack should always be called before show, so Dialog is
	set to the correct size and validated.

2005-11-02  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* configure.ac: Check for cairo, pangoft2 and freetype2 only 
	when gtk peers are enabled.

2005-11-02    Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* AUTHORS (Stuart Ballard): Address update.

2005-11-02    Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* AUTHORS: Added Lillian Angel.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JToolBar.java