@@ -1,12 +1,12 @@
 ## Input file for automake to generate the Makefile.in used by configure
 
 # Setup the compiler to use the GNU Classpath library we just build
-if FOUND_GCJ
-JCOMPILER = $(GCJ) --bootclasspath '$(top_builddir)/lib' --classpath . -C
-else
-if FOUND_JIKES
-JCOMPILER = $(JIKES) -bootclasspath '' -extdirs '' -sourcepath '' --classpath $(top_builddir)/lib:.
-else
+#if FOUND_GCJ
+#JCOMPILER = $(GCJ) --bootclasspath '$(top_builddir)/lib' --classpath . -C
+#else
+#if FOUND_JIKES
+#JCOMPILER = $(JIKES) -bootclasspath '' -extdirs '' -sourcepath '' --classpath $(top_builddir)/lib:.
+#else
 if FOUND_GCJX
 JCOMPILER = $(GCJX) -bootclasspath '' -sourcepath '' -classpath $(top_builddir)/lib:.
 else
@@ -15,8 +15,8 @@ JCOMPILER = $(ECJ) -1.5 -bootclasspath '$(top_builddir)/lib' -classpath .
 else
 error dunno how to setup the JCOMPILER and compile
 endif
-endif
-endif
+#endif
+#endif
 endif
 
 # All our example java source files
